# Haskell-Snake

./: LICENSE  readme.md  snake.cabal
app/: Logic.hs  Main.hs
app/examples/: game.hs
