cabal-version:      3.0
name:               snake
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Bernard Poh
maintainer:         bernard.poh.24@ucl.ac.uk
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable snake
    import:           warnings
    main-is:          Main.hs
    other-modules:    Logic
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, random, text, ansi-terminal, ansi-terminal-game, linear, lens, containers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
